# ironSymCmp

./: Makefile  README.md  bumper.h  fix.vim  glue.c  klee-last  linked.bc  linked.ll  patched.bc  superglue.bc  superglue.c  vuln.bc
klee-out-0/: assembly.ll  info  messages.txt  run.istats  run.stats  test000001.ktest  test000002.assert.err  test000002.kquery  test000002.ktest  test000003.ktest  test000004.ktest  test000005.ktest  test000006.ktest  test000007.ktest
patched/: Makefile  README.md  glue.bc  input-rx_brake_routine.bc  input-rx_brake_routine.ll  linked.bc
patched/challenge-3-x86-program_c_patched-rx_brake_routine/: input  input-rx_brake_routine.bc  input-rx_brake_routine.c  input-rx_brake_routine.json
rename_symbols_pass/: CMakeLists.txt  README.md  rename_symbols.cpp
vuln/: README.md  glue.bc  glue.c  input-rx_brake_routine.bc  linked.bc
vuln/challenge-3-x86-program_c-rx_brake_routine/: input  input-rx_brake_routine.bc  input-rx_brake_routine.c  input-rx_brake_routine.json  input-rx_brake_routine.ll
